--- a/debug.env
+++ b/debug.env
@@ -5,11 +5,11 @@ context.teamId=8
 context.workspaceId=349
 modal.state.slyProjectId=8472
 
-modal.state.slyFile="/csv-images-big-test.csv"
+modal.state.slyFile="/csv-images/zxccxz/relative-img-paths.csv"
 
 
-DEBUG_APP_DIR="/home/paul/Documents/Work/Applications/import-images-from-csv/src/debug/app_debug_data"
-DEBUG_CACHE_DIR="/home/paul/Documents/Work/Applications/import-images-from-csv/src/debug/app_debug_cache"
+DEBUG_APP_DIR="/home/paul/Documents/Work/Applications/ORIGINAL/import-images-from-csv/src/debug/app_debug_data"
+DEBUG_CACHE_DIR="/home/paul/Documents/Work/Applications/ORIGINAL/import-images-from-csv/src/debug/app_debug_cache"
 
 
 LOG_LEVEL="debug"
