--- a/debug.env
+++ b/debug.env
@@ -5,7 +5,7 @@ context.teamId=8
 context.workspaceId=349
 modal.state.slyProjectId=8472
 
-modal.state.slyFile="/newfolder/trash-folder/url_images.csv"
+modal.state.slyFile="/images.csv"
 
 
 DEBUG_APP_DIR="/home/paul/Documents/Work/Applications/ORIGINAL/import-images-from-csv/src/debug/app_debug_data"
