--- a/debug.env
+++ b/debug.env
@@ -5,7 +5,7 @@ context.teamId=283
 context.workspaceId=410
 modal.state.slyProjectId=8472
 
-modal.state.slyFile="/demo_files/url_images.csv"
+modal.state.slyFile="/demo_files/path_images.csv"
 
 
 DEBUG_APP_DIR="/home/paul/Documents/Work/Applications/ORIGINAL/import-images-from-csv/src/debug/app_debug_data"
