--- a/config.json
+++ b/config.json
@@ -2,7 +2,8 @@
   "name": "Import Images from CSV",
   "type": "app",
   "categories": [
-    "import"
+    "import",
+    "images"
   ],
   "description": "Upload images using .CSV file",
   "docker_image": "supervisely/base-py-sdk:6.6.0",
