--- a/config.json
+++ b/config.json
@@ -6,7 +6,8 @@
     "images"
   ],
   "description": "Upload images using .CSV file",
-  "docker_image": "supervisely/base-py-sdk:6.6.0",
+  "docker_image": "supervisely/base-py-sdk:6.23.1",
+  "instance_version": "6.4.57",
   "main_script": "src/main.py",
   "task_location": "workspace_tasks",
   "icon": "https://imgur.com/zlcLjAM.png",
