--- a/local.env
+++ b/local.env
@@ -1,15 +1,20 @@
 PYTHONUNBUFFERED=1
-TASK_ID=30878
 
+#TASK_ID=507460
+#context.teamId=69776
+#context.workspaceId=81824
+
+TASK_ID=30940
 context.teamId=451
 context.workspaceId=695
+
 modal.state.slyProjectId=19060
 
-modal.state.slyFile="/img_url.csv"
+modal.state.slyFile="/img_url_wo_ext_pexels.csv"
 
 
-DEBUG_APP_DIR="D:/Work/app_data"
-DEBUG_CACHE_DIR="D:/Work/app_cache"
+DEBUG_APP_DIR="/home/ganpoweird/Work/app_data"
+DEBUG_CACHE_DIR="/home/ganpoweird/Work/app_cache"
 
 
 LOG_LEVEL="debug"
