--- a/config.json
+++ b/config.json
@@ -10,7 +10,7 @@
   "instance_version": "6.4.57",
   "main_script": "src/main.py",
   "task_location": "workspace_tasks",
-  "icon": "https://imgur.com/zlcLjAM.png",
+  "icon": "media/icon.png",
   "icon_cover": false,
   "icon_background": "#FFFFFF",
   "context_menu": {
@@ -18,5 +18,5 @@
       "files_file"
     ]
   },
-  "poster": "https://imgur.com/IcPLSjq.png"
+  "poster": "media/poster.jpeg"
 }
