--- a/local.env
+++ b/local.env
@@ -1,20 +1,14 @@
 PYTHONUNBUFFERED=1
 
-#TASK_ID=507460
-#context.teamId=69776
-#context.workspaceId=81824
+TASK_ID=41939
+context.teamId=435
+context.workspaceId=683
 
-TASK_ID=30940
-context.teamId=451
-context.workspaceId=695
+modal.state.slyProjectId=26502
 
-modal.state.slyProjectId=19060
+modal.state.slyFile="/Example import csv/images1.csv"
 
-modal.state.slyFile="/img_url_wo_ext_pexels.csv"
-
-
-DEBUG_APP_DIR="/home/ganpoweird/Work/app_data"
-DEBUG_CACHE_DIR="/home/ganpoweird/Work/app_cache"
-
+DEBUG_APP_DIR="src/debug/app_data"
+DEBUG_CACHE_DIR="src/debug/app_cache"
 
 LOG_LEVEL="debug"
