--- a/local.env
+++ b/local.env
@@ -1,12 +1,11 @@
 PYTHONUNBUFFERED=1
 
-TASK_ID=41939
-context.teamId=435
-context.workspaceId=683
+TASK_ID=42370
+context.teamId=8
+context.workspaceId=349
 
-modal.state.slyProjectId=26502
-
-modal.state.slyFile="/Example import csv/images1.csv"
+# modal.state.slyProjectId=26502
+modal.state.slyFile="/sheet_img_cols2.csv"
 
 DEBUG_APP_DIR="src/debug/app_data"
 DEBUG_CACHE_DIR="src/debug/app_cache"
