--- a/local.env
+++ b/local.env
@@ -1,11 +1,11 @@
 PYTHONUNBUFFERED=1
 
-TASK_ID=58278
+TASK_ID=42370
 context.teamId=8
 context.workspaceId=349
 
 # modal.state.slyProjectId=26502
-modal.state.slyFile="/Girls Clothing _ Next.csv"
+modal.state.slyFile="/sheet_img_cols2.csv"
 
 DEBUG_APP_DIR="src/debug/app_data"
 DEBUG_CACHE_DIR="src/debug/app_cache"
