--- a/config.json
+++ b/config.json
@@ -1,10 +1,13 @@
 {
   "name": "Import Images from CSV",
   "type": "app",
-  "categories": ["import", "images"],
+  "categories": [
+    "import",
+    "images"
+  ],
   "description": "Upload images using .CSV file",
-  "docker_image": "supervisely/import-export:6.73.147",
-  "instance_version": "6.10.0",
+  "docker_image": "supervisely/import-export:6.73.160",
+  "instance_version": "6.11.8",
   "main_script": "src/main.py",
   "modal_template": "src/modal.html",
   "task_location": "workspace_tasks",
@@ -12,7 +15,9 @@
   "icon_cover": false,
   "icon_background": "#FFFFFF",
   "context_menu": {
-    "target": ["files_file"]
+    "target": [
+      "files_file"
+    ]
   },
   "poster": "https://imgur.com/IcPLSjq.png"
 }
